# RUST-TA

./: .gitignore  ARCHITECTURE.md  Cargo.toml  FUTURE-WORK.md  README.md  clippy.toml  rustfmt.toml
benches/: BENCHMARK_RESULTS.md  python_vs_rust.py
crates/ta-core/: Cargo.toml
crates/ta-core/src/: dataframe.rs  error.rs  lib.rs  num.rs  ohlcv.rs  prelude.rs  series.rs  traits.rs  utils.rs  window.rs
crates/ta-indicators/: Cargo.toml
crates/ta-indicators/src/: lib.rs  prelude.rs
crates/ta-indicators/src/momentum/: mod.rs  roc.rs  rsi.rs  stoch_rsi.rs  stochastic.rs  williams_r.rs
crates/ta-indicators/src/trend/: adx.rs  aroon.rs  ema.rs  macd.rs  mod.rs  sma.rs  wma.rs
crates/ta-indicators/src/volatility/: atr.rs  bollinger.rs  donchian.rs  keltner.rs  mod.rs
crates/ta-indicators/src/volume/: cmf.rs  mfi.rs  mod.rs  obv.rs  vwap.rs
crates/ta-indicators/tests/: golden_tests.rs  property_tests.proptest-regressions  property_tests.rs
crates/ta-python/: Cargo.toml
crates/ta-python/src/: lib.rs
crates/ta-simd/: Cargo.toml
crates/ta-simd/src/: lib.rs
crates/ta-transforms/: Cargo.toml
crates/ta-transforms/src/: lib.rs  log_return.rs  normalization.rs  pipeline.rs  prelude.rs  robust_normalization.rs
crates/ta-transforms/tests/: integration_tests.rs
golden/python_outputs/: sample_ohlcv.json  synthetic_ohlcv.json
scripts/: fetch_ohlcv.py  generate_golden.py
tests/common/: mod.rs
